fixing alignment

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -52,7 +52,7 @@ body {
 }
 
 .profile-image {
-    float: left; /* Align the image to the left */
+    float: center; /* Align the image to the left */
     margin-right: 10px; /* Add some margin for spacing */
 	border: 3px solid #90d5f0; /* Add a 3px border with the color #90d5f0 */
     border-radius: 50%;
